# C-conference_project

emulator-main/: .gitignore  CMakeLists.txt  README.md
emulator-main/img/: add.img  add.txt  bubble-sort.txt  div.txt  dummy.txt  if-else.txt  load-store.img  load-store.txt  shift.img  shift.txt
emulator-main/include/: common.h  cpu.h  decoder.h  emulator.h  mem.h
emulator-main/src/: cpu.c  decoder.c  emulator.c  main.c  mem.c
expr-main/: .gitignore  CMakeLists.txt  README.md
expr-main/include/: common.h  expr.h
expr-main/src/: expr.c
expr-main/test/: checkParenthesesTest.txt  exprTest.txt  test.c
snake_game-main/: .gitignore  README.md  Snake.c  Snake.h  scoreBoard.txt  test.c
